modules/core/client/css/kalli.css
/********************* TYPOGRAPHY ********************* */
@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');


/********************* BODY ********************* */
body {
	padding-top: 50px;
	font-family: 'Roboto', sans-serif;
	font-weight: 300;
	background-color: #fff;
	letter-spacing: -0.02em;
	font-size: 14px;
	overflow-x: hidden;
}

ul {
	-webkit-padding-start: 0px !important;
	-webkit-margin-before: 0px !important;
	-webkit-margin-after: 0px !important;
}

/********************* HEADER ********************* */
.kalli-header {
	position: relative;
	margin: 120px 0 300px 0;	
	display: block;
}

.kalli-header-title {
	width: 300px;
	height: 200px;
	display: inline-block;
	/*border: 1px solid #00f;*/
	position: relative;
	font-family: 'PT Serif';
	font-size: 64px;
}

.kalli-header-subtitle {
	width: 280px;
	display: inline-block;
	/*border: 1px solid #00f;*/
	position: absolute;
	left: 0;
	top: 200px;
	font-size: 28px;
}

.kalli-header-image {
	/*border: 1px solid #00f;*/
	width: 820px;
	height: 440px;
	display: inline-block;
	position: absolute;
	margin: 0 auto;
	background-image: url(../img/header.png);
}
/********************* STEPS ********************* */
.kalli-inline-header {
	text-align: center;
	font-size: 28px;
	margin: 100px 0;
	position: relative;
	display: block;
	font-family: 'PT Serif';
	font-weight: 500;
	/*border: 1px solid #00f;*/
}


.kalli-steps-list > ul > li {
	/*width: 700px;*/
	margin: 20px 0;
	display: block;
	padding: 0px;
	font-size: 18px;
	line-height: 36px;
	/*border: 1px solid #00f;*/
}

.kalli-steps-list > ul > li  .kalli-steps-list-number {
	font-size: 28px;
	line-height: 36px;
}

/********************* FEATURES ********************* */

.kalli-features-list > ul > li {
	width: 25%;
	margin: 0 40px;
	display: inline-block;
	/*border: 1px solid #00f;*/
	text-align: center;
	font-size: 18px;
	vertical-align: top;
}

.kalli-features-list > ul > li > .feature1 {
	margin: 0 auto;
	height: 150px;
	width: 150px;
	background-image: url(../img/feature1.png);
}

.kalli-features-list > ul > li > .feature2 {
	margin: 0 auto;
	height: 150px;
	width: 170px;
	background-image: url(../img/feature2.png);
}

.kalli-features-list > ul > li > .feature3 {
	margin: 0 auto;
	height: 150px;
	width: 210px;
	background-image: url(../img/feature3.png);
}

.kalli-features-list > ul > li > p {
	margin-top: 20px;
	display: block;
	position: relative;
}

/********************* COURSES ********************* */
.kalli-course-card {
	width: 300px;
	height: auto;
	min-height: 140px;
	border: 0.5px solid rgba(0,0,0,0.20);
	background: #FFFFFF;
	box-shadow: 3px 3px 20px 2px rgba(0,0,0,0.2);
	border-radius: 5px;
	cursor: pointer;
	margin: 0 auto;
	position: relative;
}

.kalli-course-card:hover {
	box-shadow: 3px 3px 20px 2px  rgba(0,0,0,0.3);

}

.kalli-course-title {
	font-size: 24px;
	margin: 0 auto;
	display: block;
	position: relative;
	text-align: center;
	padding: 20px;
}

.kalli-course-description-title {
	margin: 0px 20px;
	display: block;
	position: relative;	
	font-weight: 500;
}

.kalli-course-description-image {
	margin-bottom: 20px;
	width: 290px;
	height: 200px;
	background: url(../img/course-image.png);
	/*border: 1px solid;*/
}

.kalli-course-description {
	margin: 20px;
	display: block;
	position: relative;
	font-size: 12px;
}

.kalli-course-button {
	margin: 0 auto;
	/*border: 1px solid #979797;*/
	display: block;
	position: relative;
	background: rgba(158,158,158,.2);
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
	border: none;
    border-radius: 2px;
    color: #000;
    position: relative;
    height: 36px;
    padding: 0 16px;
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 0;
    overflow: hidden;
    will-change: box-shadow;
    transition: box-shadow .2s cubic-bezier(.4,0,1,1),background-color .2s cubic-bezier(.4,0,.2,1),color .2s cubic-bezier(.4,0,.2,1);
    outline: none;
    cursor: pointer;
    text-decoration: none;
    text-align: center;
    line-height: 36px;
    vertical-align: middle;
}

.kalli-course-button:hover, .kalli-course-button:active {
	background: rgba(158,158,158,.3);
}


.kalli-course-concepts {
	margin: 20px 20px 0 20px;
	display: block;
	position: relative;
	opacity: 0.6;
	font-size: 12px;
}
/********************* LEARN MORE ********************* */
/********************* VIDEO ********************* */
.kalli-learn-more {
	display: block;
	margin: 0 auto;
	position: relative;
}

.kalli-video  {
	display: inline-block;
	position: relative;
	left: 0;
	text-align: center;
	font-size: 18px;
}

.kalli-video >iframe:hover {
	box-shadow: 3px 3px 20px 2px rgba(0,0,0,0.30);
}

.kalli-paper {
	display: inline-block;
	position: absolute;
	right: 0;
	text-align: center;
	font-size: 18px;
}

.kalli-paper-container {
	width: 500px;
	height: 280px;
    border-radius: 5px;
	background: url(../img/paper.png) center no-repeat;
}

.kalli-paper-container:hover {
	box-shadow: 3px 3px 20px 2px rgba(0,0,0,0.30);
}

/********************* TEAM ********************* */
.kalli-team-list {
	display: block;
	position: relative;
	margin: 0 auto;
}
.kalli-team-list > ul > li {
	width: 150px;
	margin: 0px 40px 0px 30px;
	display: inline-block;
	text-align: center;	
    background: #fff;
    border-radius: 5px;
    box-sizing: border-box;
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
}

.kalli-team-list > ul > li:hover {
    box-shadow: 0 2px 2px 0 rgba(0,0,0,.2), 0 3px 1px -2px rgba(0,0,0,.3), 0 1px 5px 0 rgba(0,0,0,.2);

}

.kalli-team-list > ul > li > .profile-photo-Micha {
	width: 150px;
	height: 100px;
	background: url(../img/profile-photo.png) center;
}

.kalli-team-list > ul > li > .profile-photo-Hendrik {
	width: 150px;
	height: 100px;
	background: url(../img/team/Hendrik.png) top;
}

.kalli-team-list > ul > li > .profile-photo-James {
	width: 150px;
	height: 100px;
	background: url(../img/team/James.png) center;
}

.kalli-team-list > ul > li > .profile-photo-Gary {
	width: 150px;
	height: 100px;
	background: url(../img/team/GaryKing.jpeg) center;
}

.kalli-team-list > ul > li > .profile-photo-HP {
	width: 150px;
	height: 100px;
	background: url(../img/team/HP.jpeg) top;
}

.kalli-team-list > ul > li > .profile-name {
	letter-spacing: 0;
	text-align: center;
	line-height: 36px;	
	margin-top: 10px;
}

.kalli-team-list > ul > li > .profile-personal-website {
	color: #3f51b5;
	font-weight: 400;
	letter-spacing: 0;
	cursor: pointer;    
	text-align: center;
	line-height: 36px;
}

.kalli-team-list > ul > li > .profile-personal-website:hover {
	font-weight: 500;
}

/********************* FOOTER ********************* */
.kalli-footer {
	margin: 150px 0 20px 0;
	display: block;
	position: relative;	
	height: 40px;
}
.kalli-footer-list {
	display: block;
	position: relative;	
	/*border: 1px solid;*/
}

.kalli-footer-list > ul > li {
	display: inline-block;
	/*border: 1px solid #00f;*/
}

.kalli-footer-list > ul > li > a > .logo1 {
	width: 170px;	
	height: 30px;
	background: url(../img/logo1.png) top left no-repeat;
}

.kalli-footer-list > ul > li > a > .logo2 {
	top: 0;
	width: 117px;
	height: 30px;
	background: url(../img/logo2.png) top left no-repeat;
}

.kalli-footer-list > ul > li > a > .logo3 {
	top: 0;
	width: 150px;
	height: 30px;
	background: url(../img/logo3.png) top left no-repeat;
}

.kalli-footer-text { 
	display: block;
	position: absolute;
	right: 0;
	top: 0;
	/*border: 1px solid;*/
	font-size: 12px;
	text-align: right;
	height: 30px;
	line-height: 18px;
}

.kalli-footer-text > a {
	color: #000;
	font-weight: 400;
}

